fix: some issues on mobile

--- a/src/app/[lng]/components/layout/footer/footer.module.css
+++ b/src/app/[lng]/components/layout/footer/footer.module.css
@@ -115,7 +115,7 @@
     .footer {
         flex-direction: column;
         align-items: flex-end;
-        padding: 0 2rem 2rem 2rem;
+        padding: 0 2rem 6rem 2rem;
         width: calc(100% + 4rem);
         font-size: 0.8rem;
     }
@@ -146,6 +146,12 @@
 
     .socials > svg {
         width: 10vw;
+    }
+}
+
+@media only screen and (min-width: 600px) and (max-width: 1032px) {
+    .footer {
+        padding-bottom: 6rem;
     }
 }
 
