--- a/src/app/components/transition-handler/transition-handler.module.css
+++ b/src/app/components/transition-handler/transition-handler.module.css
@@ -8,6 +8,7 @@
     bottom: auto;
     right: auto;
     background: black;
+    overflow: hidden;
 }
 
 .whiteLayer {
@@ -20,4 +21,5 @@
     bottom: auto;
     right: auto;
     background: white;
+    overflow: hidden;
 }
